--- a/community/memberships.html
+++ b/community/memberships.html
@@ -11,7 +11,7 @@ title: Choose Your Membership
         <aside class="deadline-notice" id="deadlineNotice" aria-label="Limited time offer">
             <div class="icon">⏰</div>
             <h3>Limited Time Offer</h3>
-            <p>Lock in Early Adopter pricing and get <strong>40% off</strong> before December 31st!</p>
+            <p>Lock in Early Adopter pricing and get <strong>50% off</strong> before December 31st!</p>
         </aside>
     </div>
 
@@ -25,7 +25,7 @@ title: Choose Your Membership
     <span class="c-toggle-label">Annually</span>
 </div>
 <section class="c-features" aria-label="Membership plans">
-    <article class="c-feature">
+    <!-- <article class="c-feature">
         <header class="card-header">
             <div class="header-title margin-top">
                 <h3 id="super-member-plan">Super Member</h3>
@@ -59,7 +59,7 @@ title: Choose Your Membership
         <div class="c-button-wrapper">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScM91mlTIv8oVvGIOgaASk_RJmMnDFV6ECuM-u09o6XK5--lg/viewform?usp=header" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
-    </article>
+    </article> -->
 
     <article class="c-feature featured">
         <header class="card-header">
@@ -69,7 +69,7 @@ title: Choose Your Membership
                     <span id="planBadgeText">Limited Time</span>
                 </span>
             </div>
-            <p aria-describedby="memberPlanTitle"><strong>Early adopters get 40% off for 12 months.</strong><br>Full access to our community platform, resources, and network of clinicians.</p>
+            <p aria-describedby="memberPlanTitle"><strong>Early adopters get 50% off for 12 months.</strong><br>Full access to our community platform, resources, and network of clinicians.</p>
         </header>
 
         <div class="c-toggle-container mobile-toggle">
@@ -84,8 +84,8 @@ title: Choose Your Membership
         <div class="price-container">
             <div class="price">
                 <div class="price-amount">
-                    <span class="price-original" data-monthly="$19" data-annually="$14">$19</span>
-                    <span class="price-currency">$</span><span class="price-value" data-monthly="11.40" data-annually="8.40">11.40</span>
+                    <span class="price-original" data-monthly="$39" data-annually="$29">$39</span>
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="19.50" data-annually="14.50">19.50</span>
                 </div>
                 <div class="price-period-annually">per month</div>
             </div>
@@ -128,7 +128,7 @@ title: Choose Your Membership
         <div class="price-container">
             <div class="price">
                 <div class="price-amount">
-                    <span class="price-currency">$</span><span class="price-value" data-monthly="19" data-annually="14">19</span>
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="39" data-annually="29">39</span>
                 </div>
                 <div class="price-period-annually">per month</div>
             </div>
