--- a/community/memberships.html
+++ b/community/memberships.html
@@ -16,29 +16,29 @@ title: Choose Your Membership
     </div>
 
 </section>
-<div class="c-toggle-container desktop-toggle">
+<!-- <div class="c-toggle-container desktop-toggle">
     <span class="c-toggle-label">Monthly</span>
     <label class="c-switch">
-        <input type="checkbox" class="pricingToggle">
+        <input type="checkbox" class="pricingToggle" checked>
         <span class="c-slider"></span>
     </label>
     <span class="c-toggle-label">Annually</span>
-</div>
+</div> -->
 <section class="c-features" aria-label="Membership plans">
-    <!-- <article class="c-feature">
+    <article class="c-feature">
         <header class="card-header">
             <div class="header-title margin-top">
                 <h3 id="super-member-plan">Super Member</h3>
             </div>
-            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all early adopter benefits.</strong><br>
-                For active community contributors who want to proactively develop discussions 
-                support fellow members.</p>
+            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all Founder benefits.</strong><br>
+                This is for active community contributors who want to proactively develop discussions 
+                and support fellow members.</p>
         </header>
 
         <div class="price-container">
             <div class="price">
                 <div class="price-amount">
-                    <span class="price-currency">$</span>1
+                    <span class="price-currency">$</span>5.90
                 </div>
                 <div class="price-period">per month</div>
             </div>
@@ -53,15 +53,59 @@ title: Choose Your Membership
         </ul>
 
         <footer class="special-note">
-            <p><strong>Engagement Requirements:</strong> Super Member rates are subject to minimum engagement requirements.</p>
-        </footer>
+            <p><strong>Engagement Requirements:</strong>
+                <br>The application form will be sent to you immediately upon sign-up. 
+                <br>To continue the discount beyond the first month, your submitted form will be reviewed and requires approval.
+            </footer>
 
         <div class="c-button-wrapper">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScM91mlTIv8oVvGIOgaASk_RJmMnDFV6ECuM-u09o6XK5--lg/viewform?usp=header" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=N0SVDVCH" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
-    </article> -->
-
+    </article>
     <article class="c-feature featured">
+        <header class="card-header">
+            <div class="header-title">
+                <h3 id="memberPlanTitle">Founder</h3>
+                <span class="c-badge limited-badge-position" id="planBadge">
+                    <span id="planBadgeText">Limited Time</span>
+                </span>
+            </div>
+            <p aria-describedby="memberPlanTitle"><strong>Founders get 75% off for the first 3 months.</strong><br>Full access to our community platform, resources, and network of clinicians.</p>
+        </header>
+
+        <!-- <div class="c-toggle-container mobile-toggle">
+            <span class="c-toggle-label">Monthly</span>
+            <label class="c-switch">
+                <input type="checkbox" class="pricingToggle" checked>
+                <span class="c-slider"></span>
+            </label>
+            <span class="c-toggle-label">Annually</span>
+        </div> -->
+
+        <div class="price-container">
+            <div class="price">
+                <div class="price-amount">
+                    <span class="price-original" data-monthly="$39" data-annually="$39">$39</span>
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="9.75" data-annually="9.75">9.75</span>
+                </div>
+                <div class="price-period-annually">per month</div>
+            </div>
+        </div>
+
+        <ul class="features-list">
+            <li>Unlimited access to community platform</li>
+            <li>Knowledge base & resources</li>
+            <li>Discussion forums</li>
+            <li>Expert contributor content</li>
+            <li>Regular live discussions and networking (online)</li>
+            <li>Access to courses (Coming soon)</li>
+        </ul>
+
+        <div class="c-button-wrapper">
+            <a href="https://aiforclin.circle.so/checkout/40percent-discount?coupon_code=DDPYKEAA" target="_blank" class="c-submit-button" type="button">Get Started</a>
+        </div>
+    </article>
+    <!-- <article class="c-feature featured">
         <header class="card-header">
             <div class="header-title">
                 <h3 id="memberPlanTitle">Early Adopter</h3>
@@ -75,7 +119,7 @@ title: Choose Your Membership
         <div class="c-toggle-container mobile-toggle">
             <span class="c-toggle-label">Monthly</span>
             <label class="c-switch">
-                <input type="checkbox" class="pricingToggle">
+                <input type="checkbox" class="pricingToggle" checked>
                 <span class="c-slider"></span>
             </label>
             <span class="c-toggle-label">Annually</span>
@@ -103,7 +147,7 @@ title: Choose Your Membership
         <div class="c-button-wrapper">
             <a href="https://aiforclin.circle.so/checkout/40percent-discount?coupon_code=DDPYKEAA" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
-    </article>
+    </article> -->
 
     <article class="c-feature disabled">
         <header class="card-header">
