--- a/community/memberships.html
+++ b/community/memberships.html
@@ -102,7 +102,7 @@ title: Choose Your Membership
         </ul>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/40percent-discount?coupon_code=DDPYKEAA" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/founder-75percent-discount?coupon_code=TKUKTFLU" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
     <!-- <article class="c-feature featured">
