founder discount updated

--- a/community/memberships.html
+++ b/community/memberships.html
@@ -11,7 +11,7 @@ title: Choose Your Membership
         <aside class="deadline-notice" id="deadlineNotice" aria-label="Limited time offer">
             <div class="icon">⏰</div>
             <h3>Limited Time Offer</h3>
-            <p>Lock in Early Adopter pricing and get <strong>50% off</strong> before December 31st!</p>
+            <p>Lock in Founder pricing before December 21st and get <br><strong>15 Months Discount!</strong></p>
         </aside>
     </div>
 
@@ -93,6 +93,7 @@ title: Choose Your Membership
         </div>
 
         <ul class="features-list">
+            <li>75% off for 3 months plus 12 months of Early Bird pricing</li>
             <li>Unlimited access to community platform</li>
             <li>Knowledge base & resources</li>
             <li>Discussion forums</li>
