prov psych membership

--- a/community/memberships.html
+++ b/community/memberships.html
@@ -150,11 +150,53 @@ title: Choose Your Membership
         </div>
     </article> -->
 
+     <article class="c-feature">
+        <header class="card-header">
+            <div class="header-title">
+                <h3 id="memberPlanTitle">Provisional Psych.</h3>
+            </div>
+            <p aria-describedby="memberPlanTitle"><strong>Provisional Psychologists get 12 months free.</strong><br>Full access to our community platform, resources, and network of clinicians.</p>
+        </header>
+
+        <!-- <div class="c-toggle-container mobile-toggle">
+            <span class="c-toggle-label">Monthly</span>
+            <label class="c-switch">
+                <input type="checkbox" class="pricingToggle" checked>
+                <span class="c-slider"></span>
+            </label>
+            <span class="c-toggle-label">Annually</span>
+        </div> -->
+
+        <div class="price-container">
+            <div class="price">
+                <div class="price-amount">
+                    <span class="price-original" data-monthly="$39" data-annually="$39">$39</span>
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="0" data-annually="0">0</span>
+                </div>
+                <div class="price-period-annually">per month</div>
+            </div>
+        </div>
+
+        <ul class="features-list">
+            <li>12 months free</li>
+            <li>Unlimited access to community platform</li>
+            <li>Knowledge base & resources</li>
+            <li>Discussion forums</li>
+            <li>Expert contributor content</li>
+            <li>Regular live discussions and networking (online)</li>
+            <li>Access to courses (Coming soon)</li>
+        </ul>
+
+        <div class="c-button-wrapper">
+            <a href="https://aiforclin.circle.so/checkout/provisional-psychologist-membership?coupon_code=1CUTGSYR" target="_blank" class="c-submit-button" type="button">Get Started</a>
+        </div>
+    </article>
+
     <article class="c-feature disabled">
         <header class="card-header">
             <div class="header-title margin-top">
                 <h3 id="memberPlanTitle">Standard</h3>
-                <span class="c-badge limited-badge-position-standard" id="planBadge">
+                <span class="c-badge limited-badge-position" id="planBadge">
                     <span id="planBadgeText">Starting January</span>
                 </span>
             </div>
