--- a/community/memberships.html
+++ b/community/memberships.html
@@ -59,7 +59,7 @@ title: Choose Your Membership
             </footer>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=IO5DMB35" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=VOLZSWGB" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
     <article class="c-feature featured">
