--- a/community/memberships.html
+++ b/community/memberships.html
@@ -11,7 +11,7 @@ title: Choose Your Membership
         <aside class="deadline-notice" id="deadlineNotice" aria-label="Limited time offer">
             <div class="icon">⏰</div>
             <h3>Limited Time Offer</h3>
-            <p>Lock in Founder pricing before December 21st and get <br><strong>15 Months Discount!</strong></p>
+            <p>Lock in Founder pricing before December 21st and get <br><strong>12 Months Discount!</strong></p>
         </aside>
     </div>
 
@@ -24,45 +24,48 @@ title: Choose Your Membership
     </label>
     <span class="c-toggle-label">Annually</span>
 </div> -->
+
 <section class="c-features" aria-label="Membership plans">
-    <article class="c-feature">
+     <article class="c-feature">
         <header class="card-header">
             <div class="header-title margin-top">
-                <h3 id="super-member-plan">Super Member</h3>
+                <h3 id="memberPlanTitle">Free Member</h3>
             </div>
-            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all Founder benefits.</strong><br>
-                This is for active community contributors who want to proactively develop discussions 
-                and support fellow members.</p>
+            <p aria-describedby="memberPlanTitle"><strong>Standard collaboration access.</strong><br>
+                Gain access to regular posts, discussions, and a network of professional clinicians.</p>
         </header>
+
+        <!-- <div class="c-toggle-container mobile-toggle">
+            <span class="c-toggle-label">Monthly</span>
+            <label class="c-switch">
+                <input type="checkbox" class="pricingToggle" checked>
+                <span class="c-slider"></span>
+            </label>
+            <span class="c-toggle-label">Annually</span>
+        </div> -->
 
         <div class="price-container">
             <div class="price">
                 <div class="price-amount">
-                    <span class="price-currency">$</span>5.90
+                    <!-- <span class="price-original" data-monthly="$39" data-annually="$39">$39</span> -->
+                    <!-- <span class="price-currency">$</span>-->
+                     <span class="price-value price-value-free" data-monthly="9.75" data-annually="9.75">Free Signup</span> 
                 </div>
-                <div class="price-period">per month</div>
             </div>
         </div>
 
         <ul class="features-list">
-            <li>All standard member benefits</li>
-            <li>You agree to contribute actively to community discussions</li>
-            <li>You agree to help onboard new members</li>
-            <li>Share your expertise, questions and insights</li>
-            <li>Recognition as community facilitator</li>
+            <li>Limited access to community platform</li>
+            <li>Posts and weekly topics</li>
+            <li>Discussion forums</li>
+            <li>Expert contributor content</li>
         </ul>
 
-        <footer class="special-note">
-            <p><strong>Engagement Requirements:</strong>
-                <br>The application form will be sent to you immediately upon sign-up. 
-                <br>To continue the discount beyond the first month, your submitted form will be reviewed and requires approval.
-            </footer>
-
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=VOLZSWGB" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/join?invitation_token=44551a976e9ba8c4cdbee0c0cf96a60697790aec-d9a041e7-6f45-499f-bbce-4878e2e9f60d" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
-    <article class="c-feature featured">
+        <article class="c-feature featured">
         <header class="card-header">
             <div class="header-title">
                 <h3 id="memberPlanTitle">Founder</h3>
@@ -70,7 +73,7 @@ title: Choose Your Membership
                     <span id="planBadgeText">Limited Time</span>
                 </span>
             </div>
-            <p aria-describedby="memberPlanTitle"><strong>Founders get 75% off for the first 3 months.</strong><br>Full access to our community platform, resources, and network of clinicians.</p>
+            <p aria-describedby="memberPlanTitle"><strong>75% off for 12 months.</strong><br>Unlimited access to events, resources, courses and a network of professional clinicians.</p>
         </header>
 
         <!-- <div class="c-toggle-container mobile-toggle">
@@ -93,7 +96,8 @@ title: Choose Your Membership
         </div>
 
         <ul class="features-list">
-            <li>75% off for 3 months plus 12 months of Early Bird pricing</li>
+            <li>1 Month free trial</li>
+            <li>75% off for 12 months</li>
             <li>Unlimited access to community platform</li>
             <li>Knowledge base & resources</li>
             <li>Discussion forums</li>
@@ -106,6 +110,45 @@ title: Choose Your Membership
             <a href="https://aiforclin.circle.so/checkout/founder-75percent-discount?coupon_code=TKUKTFLU" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
+    <article class="c-feature">
+        <header class="card-header">
+            <div class="header-title margin-top">
+                <h3 id="super-member-plan">Super Member</h3>
+            </div>
+            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all Founder benefits.</strong><br>
+                This is for active active who want to proactively develop discussions 
+                and support fellow members.</p>
+        </header>
+
+        <div class="price-container">
+            <div class="price">
+                <div class="price-amount">
+                    <span class="price-currency">$</span>5.90
+                </div>
+                <div class="price-period">per month</div>
+            </div>
+        </div>
+
+        <ul class="features-list">
+            <li>1 Month free trial</li>
+            <li>All standard member benefits</li>
+            <li>You agree to contribute actively to community discussions</li>
+            <li>You agree to help onboard new members</li>
+            <li>Share your expertise, questions and insights</li>
+            <li>Recognition as community facilitator</li>
+        </ul>
+
+        <footer class="special-note">
+            <p><strong>Engagement Requirements:</strong>
+                <br>The application form will be sent to you immediately upon sign-up. 
+                <br>To continue the discount beyond the first month, your submitted form will be reviewed and requires approval.
+            </footer>
+
+        <div class="c-button-wrapper">
+            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=VOLZSWGB" target="_blank" class="c-submit-button" type="button">Get Started</a>
+        </div>
+    </article>
+   
     <!-- <article class="c-feature featured">
         <header class="card-header">
             <div class="header-title">
@@ -152,10 +195,10 @@ title: Choose Your Membership
 
      <article class="c-feature">
         <header class="card-header">
-            <div class="header-title">
-                <h3 id="memberPlanTitle">Provisional Psych.</h3>
+            <div class="header-title margin-top">
+                <h3 id="memberPlanTitle">Provisional Psychologists</h3>
             </div>
-            <p aria-describedby="memberPlanTitle"><strong>Provisional Psychologists get 12 months free.</strong><br>Full access to our community platform, resources, and network of clinicians.</p>
+            <p aria-describedby="memberPlanTitle"><strong>Provisional Psychologists get 12 months free.</strong><br>Unlimited access to events, resources, courses and a network of professional clinicians.</p>
         </header>
 
         <!-- <div class="c-toggle-container mobile-toggle">
@@ -178,6 +221,7 @@ title: Choose Your Membership
         </div>
 
         <ul class="features-list">
+            <li>1 Month free trial</li>
             <li>12 months free</li>
             <li>Unlimited access to community platform</li>
             <li>Knowledge base & resources</li>
@@ -200,7 +244,7 @@ title: Choose Your Membership
                     <span id="planBadgeText">Starting January</span>
                 </span>
             </div>
-            <p aria-describedby="memberPlanTitle"  class="card-header-subtext">Full access to our community platform, resources, and network of clinicians.</p>
+            <p aria-describedby="memberPlanTitle"  class="card-header-subtext">Unlimited access to events, resources, courses and a network of professional clinicians.</p>
         </header>
 
         <div class="c-toggle-container mobile-toggle">
@@ -222,6 +266,7 @@ title: Choose Your Membership
         </div>
 
         <ul class="features-list">
+            <li>1 Month free trial</li>
             <li>Unlimited access to community platform</li>
             <li>Knowledge base & resources</li>
             <li>Discussion forums</li>
