start your free trial

--- a/community/memberships.html
+++ b/community/memberships.html
@@ -38,6 +38,7 @@ title: Choose Your Membership
         </header>
 
         <div class="price-container">
+            <div class="free-trial-tag">1 Month Free Trial</div>
             <div class="price">
                 <div class="price-amount">
                     <span class="price-currency">$</span>5.90
@@ -47,7 +48,6 @@ title: Choose Your Membership
         </div>
 
         <ul class="features-list">
-            <li>1 Month free trial</li>
             <li>All standard member benefits</li>
             <li>You agree to contribute actively to community discussions</li>
             <li>You agree to help onboard new members</li>
@@ -62,7 +62,7 @@ title: Choose Your Membership
             </footer>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=VOLZSWGB" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=VOLZSWGB" target="_blank" class="c-submit-button" type="button">Start Your Free Trial</a>
         </div>
     </article>
     <article class="c-feature featured">
@@ -86,6 +86,7 @@ title: Choose Your Membership
         </div> -->
 
         <div class="price-container">
+            <div class="free-trial-tag">1 Month Free Trial</div>
             <div class="price">
                 <div class="price-amount">
                     <span class="price-original" data-monthly="$39" data-annually="$39">$39</span>
@@ -96,7 +97,6 @@ title: Choose Your Membership
         </div>
 
         <ul class="features-list">
-            <li>1 Month free trial</li>
             <li>75% off for 12 months</li>
             <li>Unlimited access to community platform</li>
             <li>Knowledge base & resources</li>
@@ -107,7 +107,7 @@ title: Choose Your Membership
         </ul>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/founder-75percent-discount?coupon_code=TKUKTFLU" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/founder-75percent-discount?coupon_code=TKUKTFLU" target="_blank" class="c-submit-button" type="button">Start Your Free Trial</a>
         </div>
     </article>
 
@@ -133,6 +133,7 @@ title: Choose Your Membership
         </div>
 
         <div class="price-container">
+            <div class="free-trial-tag">1 Month Free Trial</div>
             <div class="price">
                 <div class="price-amount">
                     <span class="price-original" data-monthly="$39" data-annually="$29">$39</span>
@@ -152,7 +153,7 @@ title: Choose Your Membership
         </ul>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/40percent-discount?coupon_code=DDPYKEAA" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/40percent-discount?coupon_code=DDPYKEAA" target="_blank" class="c-submit-button" type="button">Start Your Free Trial</a>
         </div>
     </article> -->
 
@@ -160,7 +161,9 @@ title: Choose Your Membership
         <header class="card-header">
             <div class="header-title margin-top">
                 <h3 id="memberPlanTitle">Provisional Psychologists</h3>
+                    
             </div>
+
             <p aria-describedby="memberPlanTitle"><strong>Provisional Psychologists get 12 months free.</strong><br>Unlimited access to events, resources, courses and a network of professional clinicians.</p>
         </header>
 
@@ -174,6 +177,7 @@ title: Choose Your Membership
         </div> -->
 
         <div class="price-container">
+            <div class="free-trial-tag">1 Month Free Trial</div>
             <div class="price">
                 <div class="price-amount">
                     <span class="price-original" data-monthly="$39" data-annually="$39">$39</span>
@@ -184,7 +188,6 @@ title: Choose Your Membership
         </div>
 
         <ul class="features-list">
-            <li>1 Month free trial</li>
             <li>12 months free</li>
             <li>Unlimited access to community platform</li>
             <li>Knowledge base & resources</li>
@@ -195,7 +198,7 @@ title: Choose Your Membership
         </ul>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/provisional-psychologist-membership?coupon_code=1CUTGSYR" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/provisional-psychologist-membership?coupon_code=1CUTGSYR" target="_blank" class="c-submit-button" type="button">Start Your Free Trial</a>
         </div>
     </article>
 
@@ -220,6 +223,7 @@ title: Choose Your Membership
         </div>
 
         <div class="price-container">
+            <div class="free-trial-tag">1 Month Free Trial</div>
             <div class="price">
                 <div class="price-amount">
                     <span class="price-currency">$</span><span class="price-value" data-monthly="39" data-annually="29">39</span>
@@ -229,7 +233,6 @@ title: Choose Your Membership
         </div>
 
         <ul class="features-list">
-            <li>1 Month free trial</li>
             <li>Unlimited access to community platform</li>
             <li>Knowledge base & resources</li>
             <li>Discussion forums</li>
@@ -239,7 +242,7 @@ title: Choose Your Membership
         </ul>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/membership" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/membership" class="c-submit-button" type="button">Start Your Free Trial</a>
         </div>
     </article>
 </section>
